--- a/showeq/branches/pre_5_0_beta/configure.in
+++ b/showeq/branches/pre_5_0_beta/configure.in
@@ -2,11 +2,24 @@ dnl Process this file with autoconf to produce a configure script.
 dnl $Id$ $Name$
 
 AC_PREREQ(2.53)
-AC_INIT(src/main.cpp)
+AC_INIT(showeq, 5.0.0.16)
+AC_CONFIG_SRCDIR(src/main.cpp)
 AC_CANONICAL_SYSTEM
+
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(showeq, 5.0.0.15)
+AM_INIT_AUTOMAKE(1.7)
 AM_MAINTAINER_MODE
+
+dnl doxygen macros
+DX_HTML_FEATURE(ON)
+DX_CHM_FEATURE(OFF)
+DX_CHI_FEATURE(OFF)
+DX_MAN_FEATURE(OFF)
+DX_RTF_FEATURE(OFF)
+DX_XML_FEATURE(OFF)
+DX_PDF_FEATURE(OFF)
+DX_PS_FEATURE(OFF)
+DX_INIT_DOXYGEN(ShowEQ, doxygen.cfg, dox)
 
 dnl Use CCd/CXXd rather than CC/CXX otherwise it cache's the value
 dnl and prevents the alternate search from working. Would be better
