--- a/showeq/branches/pre_5_0_beta/Makefile.am
+++ b/showeq/branches/pre_5_0_beta/Makefile.am
@@ -1,16 +1,16 @@
 ACLOCAL_AMFLAGS = -I m4
-AUTOMAKE_OPTIONS = 1.7 dist-bzip2
+AUTOMAKE_OPTIONS = 1.9 dist-bzip2
 
 SUBDIRS = src conf
 
 include doxygen.am
 
 EXTRA_DIST = BUGS ChangeLog FAQ INSTALL.newbies Makefile.dist README.libEQ \
-ROADMAP showeq.1 TODO showeq.kdevelop Doxyfile $(DX_CONFIG)
+ROADMAP showeq.1 TODO showeq.kdevelop Doxyfile depcomp $(DX_CONFIG)
 
 MAINTAINERCLEANFILES = aclocal.m4 config.guess config.sub configure \
 Makefile.in ltconfig libqt2.dbg libqt3.dbg Makefile.dist.dbg \
-configure.dbg config.log ltmain.sh stamp-h.in stamp-h qt.tag
+configure.dbg config.log ltmain.sh stamp-h.in stamp-h qt.tag depcomp
 
 @DX_DOCDIR@/@PACKAGE@.tag: qt.tag
 
