--- a/showeq/branches/pre_5_0_beta/configure.in
+++ b/showeq/branches/pre_5_0_beta/configure.in
@@ -1,13 +1,13 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl $Id$ $Name$
 
-AC_PREREQ(2.53)
-AC_INIT(showeq, 5.0.0.19)
+AC_PREREQ(2.59)
+AC_INIT(showeq, 5.0.0.20)
 AC_CONFIG_SRCDIR(src/main.cpp)
 AC_CANONICAL_SYSTEM
 
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(1.7)
+AM_INIT_AUTOMAKE(1.9 dist-bzip2)
 AM_MAINTAINER_MODE
 
 dnl doxygen macros
@@ -43,7 +43,7 @@ AC_ARG_ENABLE(old-compiler,
 		;;
 	esac] )
 
-AC_DEFUN(CHECK_COMPILER,[
+AC_DEFUN([CHECK_COMPILER],[
 ac_save_cxxflags="$CXXFLAGS"
 if [[ "$ac_cv_showeq_old_compiler" == "yes" ]]; then
 	CXXFLAGS="$CXXFLAGS -DOLDCOMPILER"
@@ -158,7 +158,7 @@ dnl The below needs to be re-defined since the Qt defines from KDE destroy it
 AC_LANG_CPLUSPLUS
 
 dnl Check taken from SINS 0.5
-AC_DEFUN(SHOWEQ_CHECK_THREADING,[
+AC_DEFUN([SHOWEQ_CHECK_THREADING],[
 AC_LANG_CPLUSPLUS
 USE_THREADS=""
 LIBGETOPT=""
@@ -531,7 +531,7 @@ AC_CHECK_RPATH
 CFLAGS="$USE_THREADS $USE_OPT_C $USE_DEBUG_C $USE_INLINE_C $USE_PROFILE_C $CFLAGS"
 CXXFLAGS="$USE_THREADS $USE_OPT_CXX $USE_DEBUG_CXX $USE_INLINE_CXX  $USE_PROFILE_CXX -DQT_THREAD_SUPPORT=1 -DDISPLAY_ICONS=${CGI_ICONS} -DICON_DIR=\\\"${CGI_ICON_DIR}\\\" $CXXFLAGS"
 
-AC_DEFUN(SUCCESS,[
+AC_DEFUN([SUCCESS],[
 echo "Success!"
 case $target_os in
   solaris*)
